chore: fix IntelliJ initializaton warnings